Fixed DynMap link

--- a/dynmap.html
+++ b/dynmap.html
@@ -46,7 +46,7 @@
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="./">Forums<span class="sr-only">(current)</span></a></li>
-                <li><a href="./dynmap.html">DynMap</a></li>
+                <li><a href="http://mc.midgardmc.com:8123/">DynMap</a></li>
                 <li><a href="./about.html">About</a></li>
                 <li><a href="./rules.html">Rules</a></li>
                 <li><a href="./apply.html">Apply</a></li>
