--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
                     <li><a href="http://mc.midgardmc.com:8123/">DynMap</a></li>
                     <li><a href="./about.html">About</a></li>
                     <li><a href="./rules.html">Rules</a></li>
-                    <li><a href="./apply.html">Apply</a></li>
+                    <!--<li><a href="./apply.html">Apply</a></li>-->
                 </ul>
             </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
@@ -56,21 +56,36 @@
                     <div class="col-md-4"><img src="https://minotar.net/avatar/ngtflyer/100.png" alt="ngtflyer"
                                                class="img-rounded">
                         <h4>NgtFlyer</h4>
-                        <p>Founder of Midgard, NgtFlyer is dedicated to running a high performance Minecraft server and
-                            a quality community. </p></div>
+                    </div>
                     <div class="col-md-4"><img src="https://minotar.net/avatar/nullmatrix/100.png" alt="nullmatrix"
                                                class="img-rounded">
                         <h4>NullMatrix</h4></div>
-                    <div class="col-md-4"><img src="https://minotar.net/avatar/vanderprotofsky/100.png"
-                                               alt="vanderprotofsky" class="img-rounded">
-                        <h4>VanDerProtofsky</h4></div>
-                </div>
-                <div class="row">
                     <div class="col-md-4"><img src="https://minotar.net/avatar/spinnibbler/100.png" alt="spinnibbler"
                                                class="img-rounded">
                         <h4>SpinNibbler</h4>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-md-4"><img src="https://minotar.net/avatar/vantes/100.png" alt="vantes"
+                                               class="img-rounded">
+                        <h4>Vantes</h4>
+                </div>
+                    <div class="row">
+                        <div class="col-md-4"><img src="https://minotar.net/avatar/VanDerProtofsky/100.png" alt="VanDerProtofsky"
+                                                   class="img-rounded">
+                            <h4>VanDerProtofsky</h4>
+                        </div>
+        </section>
+        <section>
+            <h2>Minecraft</h2>
+            <p>Connection Info </p>
+            <p><code>mc.midgardmc.com</code></p>
+        </section>
+        <section>
+            <h2>TF2</h2>
+            <p>We have a TF2 server too! It is open for you and any of your friends to come play on. Over 40 great maps are in the rotation. </p>
+            <p>Connection Info </p>
+            <p><code>tf2.midgardmc.com.  Password: multipass</code></p>
         </section>
     </div>
     <footer class="footer">
