--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <li><a href="http://mc.midgardmc.com:8123/">DynMap</a></li>
                     <li><a href="./about.html">About</a></li>
                     <li><a href="./rules.html">Rules</a></li>
-                    <li><a href="./apply.html">Apply</a></li>
+                    <!--<li><a href="./apply.html">Apply</a></li>-->
                 </ul>
             </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
