Minor CSS Fixes
Fixed top image crop on home page.
Ready for deployment

--- a/apply.html
+++ b/apply.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- A website designed by Pixel Isle 2016-->
+    <!-- A website designed by @spinnibbler-->
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
