--- a/rules.html
+++ b/rules.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- A website designed by @spinnibbler-->
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
@@ -31,7 +33,7 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="./">Forums<span class="sr-only">(current)</span></a></li>
+                    <!--<li><a href="./">Forums<span class="sr-only">(current)</span></a></li>-->
                     <li><a href="http://mc.midgardmc.com:8123/">DynMap</a></li>
                     <li><a href="./about.html">About</a></li>
                     <li><a href="./rules.html">Rules</a></li>
@@ -276,7 +278,7 @@
                 Rules: Don’t cheat. Don’t use a hacked tf2 client.
             </p>
         </section>
-        <p>Lasted Updated on: 28 March 2016</p>
+        <p>Rules lasted updated on: 28 March 2016</p>
     </div>
     <footer class="footer">
         <div class="container-fluid">
