--- a/about.html
+++ b/about.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- A website designed by @spinnibbler-->
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
@@ -32,7 +34,7 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="./">Forums<span class="sr-only">(current)</span></a></li>
+                    <!--<li><a href="./">Forums<span class="sr-only">(current)</span></a></li>-->
                     <li><a href="http://mc.midgardmc.com:8123/">DynMap</a></li>
                     <li><a href="./about.html">About</a></li>
                     <li><a href="./rules.html">Rules</a></li>
@@ -50,7 +52,7 @@
                 playing changes only additions to vanilla game play.</p>
         </section>
         <section>
-            <h2>Team</h2>
+            <h2>The Team</h2>
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-md-4"><img src="https://minotar.net/avatar/ngtflyer/100.png" alt="ngtflyer"
@@ -76,16 +78,17 @@
                             <h4>VanDerProtofsky</h4>
                         </div>
         </section>
+        <h2>Servers</h2>
         <section>
-            <h2>Minecraft</h2>
+            <h3>Minecraft</h3>
             <p>Connection Info </p>
             <p><code>mc.midgardmc.com</code></p>
         </section>
         <section>
-            <h2>TF2</h2>
+            <h3>TF2</h3>
             <p>We have a TF2 server too! It is open for you and any of your friends to come play on. Over 40 great maps are in the rotation. </p>
             <p>Connection Info </p>
-            <p><code>tf2.midgardmc.com.  Password: multipass</code></p>
+            <p><code>tf2.midgardmc.com  Password: multipass</code></p>
         </section>
     </div>
     <footer class="footer">
