--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- A website designed by Pixel Isle 2016-->
+    <!-- A website designed by @spinnibbler-->
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -43,7 +43,7 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="./">Forums<span class="sr-only">(current)</span></a></li>
+                    <!--<li><a href="./">Forums<span class="sr-only">(current)</span></a></li>-->
                     <li><a href="http://mc.midgardmc.com:8123/">DynMap</a></li>
                     <li><a href="./about.html">About</a></li>
                     <li><a href="./rules.html">Rules</a></li>
