--- a/index.html
+++ b/index.html
@@ -22,11 +22,15 @@
 <div class="background">
 </div>
 <!-- Alert Box. If commented out disregard message.-->
-<!-- <div class="alert alert-danger centered" role="alert"
+<div class="alert alert-warning centered" role="alert"
+     style="font-family: Helvetica, Arial, sans-serif;margin-bottom: 10px;margin-top: 20px;"><span
+        class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span> <strong>Alert!</strong> Trying to connect with 1.9.1 or 1.9.2 profile? Please use a 1.9 profile until the server updates.
+</div>
+<!--<div class="alert alert-danger centered" role="alert"
      style="font-family: Helvetica, Arial, sans-serif;margin-bottom: 10px;margin-top: 20px;"><span
         class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span> <strong>Alert!</strong> Midgard will be
     down for maintenance on TBA.
-</div> -->
+</div>-->
 <!--/ Alert Box -->
 <div class="centered">
     <nav class="navbar navbar-default">
