--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <!-- Alert Box. If commented out disregard message.-->
 <div class="alert alert-warning centered" role="alert"
      style="font-family: Helvetica, Arial, sans-serif;margin-bottom: 10px;margin-top: 20px;"><span
-        class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span> <strong>Alert!</strong> Trying to connect with 1.9.1 or 1.9.2 profile? Please use a 1.9 profile until the server updates.
+        class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span> <strong>Alert!</strong> Trying to connect with a 1.9.1 or 1.9.2 profile? Please use a 1.9 profile until the server updates.
 </div>
 <!--<div class="alert alert-danger centered" role="alert"
      style="font-family: Helvetica, Arial, sans-serif;margin-bottom: 10px;margin-top: 20px;"><span
