Updated Fonts and Design
New Typefaces to aim for a better Identity System for Midgard.
New typefaces (Kollektif, Norwester and Lato)

--- a/about.html
+++ b/about.html
@@ -7,16 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Midgard - About</title>
+    <title>Midgard</title>
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-
+    <!-- Custom CSS -->
     <link href="css/desktop.css" rel="stylesheet">
     <link media="(max-width: 920px)" href="css/tablet.css" rel="stylesheet">
     <link media="(max-width: 500px)" href="css/mobile.css" rel="stylesheet">
-    <link href='https://fonts.googleapis.com/css?family=Playfair+Display:700|Roboto:400,500,300,700' rel='stylesheet'
-          type='text/css'>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <!-- Google Fonts -->
+    <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 </head>
 <body>
 <div class="centered">
