--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
     <link media="(max-width: 920px)" href="css/tablet.css" rel="stylesheet">
     <link media="(max-width: 500px)" href="css/mobile.css" rel="stylesheet">
     <!-- Google Fonts -->
-    <link href='https://fonts.googleapis.com/css?family=Playfair+Display:700|Roboto:400,500,300,700' rel='stylesheet'
-          type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 </head>
 <body>
 <div class="centered">
