Major Design Update
Added header images to all pages.
Cleaned up rules page to focus on “The Rules”
More work still needs to be done on ‘Rules’

--- a/about.html
+++ b/about.html
@@ -12,13 +12,14 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link href="css/desktop.css" rel="stylesheet">
+    <link href="css/desktop-subpages.css" rel="stylesheet">
     <link media="(max-width: 920px)" href="css/tablet.css" rel="stylesheet">
     <link media="(max-width: 500px)" href="css/mobile.css" rel="stylesheet">
     <!-- Google Fonts -->
     <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 </head>
 <body>
-<div class="centered">
+<div class="background-about"></div>
     <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
@@ -42,7 +43,7 @@
             </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
     </nav>
-    <div class="container-fluid">
+    <div class="container-fluid custom-container-fluid">
         <h1>About</h1>
         <section>
             <p>Midgard is a Minecraft community started in 2011. With the main focus of providing a top notch user
@@ -102,6 +103,5 @@
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-</div>
 </body>
 </html>
