--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 </head>
 <body>
+<div class="background"></div>
 <div class="centered">
     <nav class="navbar navbar-default">
         <div class="container-fluid">
@@ -42,8 +43,6 @@
             </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
     </nav>
-    <div class="jumbotron">
-    </div>
     <!-- Alert Box. If commented out disregard message.-->
    <!-- <div class="alert alert-warning centered" role="alert"
          style="font-family: Helvetica, Arial, sans-serif;margin-bottom: 10px;margin-top: 20px;"><span
@@ -55,7 +54,8 @@
         down for maintenance on TBA.
     </div>-->
     <!--/ Alert Box -->
-    <div class="container-fluid">
+    <div class="container-fluid custom-container-fluid">
+        <div class="jumbotron jumbotron-custom"></div>
         <h1>What is Midgard?</h1>
         <p>Midgard is a Minecraft community started in 2011. With the main focus of providing a top notch user
             experience with little to no down time. Midgard provides a vanilla experience with little to no major game
