Minor Design changes
Design Changes
Added warning about 1.10 update

--- a/about.html
+++ b/about.html
@@ -17,6 +17,8 @@
     <link media="(max-width: 500px)" href="css/mobile.css" rel="stylesheet">
     <!-- Google Fonts -->
     <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="fonts/font-awesome-4.6.3/css/font-awesome.min.css">
 </head>
 <body>
 <div class="background-about"></div>
@@ -91,15 +93,14 @@
             <p><code>tf2.midgardmc.com  Password: multipass</code></p>
         </section>
     </div>
-    <footer class="footer">
-        <div class="container-fluid">
-            <ul class="nav nav-pills">
-                <li role="presentation"><a href="https://twitter.com/intent/follow?&screen_name=midgardmc">Twitter</a>
-                </li>
-                <li role="presentation"><a href="mumble://mc.midgardmc.com?title=Root&version=1.2.0">Mumble</a></li>
-            </ul>
-        </div>
-    </footer>
+<footer class="footer">
+    <div class="container-fluid custom-container-fluid">
+
+        <ul class="nav nav-pills">
+            <li role="presentation"><a href="https://twitter.com/intent/follow?&screen_name=midgardmc"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
+            </li>
+        </ul>
+    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 </body>
