--- a/rules.html
+++ b/rules.html
@@ -17,6 +17,8 @@
     <link media="(max-width: 500px)" href="css/mobile.css" rel="stylesheet">
     <!-- Google Fonts -->
     <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="fonts/font-awesome-4.6.3/css/font-awesome.min.css">
     <style>
         body {
             background-color: white;
@@ -291,16 +293,15 @@
         </section>
         <p>Rules lasted updated on: 28 March 2016</p>
 
-    <footer class="footer">
-        <div class="container-fluid">
+        <footer class="footer">
+            <div class="container-fluid custom-container-fluid">
 
-            <ul class="nav nav-pills">
-                <li role="presentation"><a href="https://twitter.com/intent/follow?&screen_name=midgardmc">Twitter</a>
-                </li>
-                <li role="presentation"><a href="mumble://mc.midgardmc.com?title=Root&version=1.2.0">Mumble</a></li>
-            </ul>
-        </div>
-    </footer>
+                <ul class="nav nav-pills">
+                    <li role="presentation"><a href="https://twitter.com/intent/follow?&screen_name=midgardmc"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
+                    </li>
+                </ul>
+            </div>
+        </footer>
     <span id="top-link-block" class="hidden">
     <a href="#top" class="well well-sm" onclick="$('html,body').animate({scrollTop:0},'slow');return false;">
         <i class="glyphicon glyphicon-chevron-up"></i> Back to Top
