--- a/index.html
+++ b/index.html
@@ -24,10 +24,6 @@
 
 <div class="centered">
     <nav class="navbar navbar-default">
-        <div class="alert alert-warning centered" role="alert"
-             style="font-family: Helvetica, Arial, sans-serif;margin-bottom: 10px;margin-top: 20px;letter-spacing: 0px;text-transform: none;"><span
-                class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span> <strong>Alert!</strong> Getting an error connecting to the server? Downgrade to 1.9.4 in the launcher until the server is updated to 1.10
-        </div>
         <div class="container-fluid">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
@@ -51,7 +47,10 @@
         </div><!--/.container-fluid -->
     </nav>
     <!-- Alert Box. If commented out disregard message.-->
-
+    <!-- <div class="alert alert-warning centered" role="alert"
+          style="font-family: Helvetica, Arial, sans-serif;margin-bottom: 10px;margin-top: 20px;letter-spacing: 0px;text-transform: none;"><span
+             class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span> <strong>Alert!</strong> Getting an error connecting to the server? Downgrade to 1.9.4 in the launcher until the server is updated to 1.10
+     </div>-->
     <!--<div class="alert alert-danger centered" role="alert"
          style="font-family: Helvetica, Arial, sans-serif;margin-bottom: 10px;margin-top: 20px;"><span
             class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span> <strong>Alert!</strong> Midgard will be
@@ -60,6 +59,16 @@
     <!--/ Alert Box -->
     <div class="container-fluid custom-container-fluid">
         <div class="jumbotron jumbotron-custom"></div>
+       <!-- <div class="row">
+            <div class="col-md-4"><h1>What is Midgard?</h1>
+                <p>Midgard is a Minecraft community started in 2011. With the main focus of providing a top notch user
+                    experience with little to no down time. Midgard provides a vanilla experience with little to no
+                    major game
+                    playing changes only additions to vanilla game play.</p></div>
+            <div class="col-md-4"><i class="fa fa-server fa-5x" aria-hidden="true"></i><h4>24/7 Uptime</h4></div>
+            <div class="col-md-4"><i class="fa fa-users fa-5x" aria-hidden="true"></i><h4>Creative Community</h4></div>
+        </div>-->
+
         <h1>What is Midgard?</h1>
         <p>Midgard is a Minecraft community started in 2011. With the main focus of providing a top notch user
             experience with little to no down time. Midgard provides a vanilla experience with little to no major game
@@ -69,7 +78,8 @@
         <div class="container-fluid custom-container-fluid">
 
             <ul class="nav nav-pills">
-                <li role="presentation"><a href="https://twitter.com/intent/follow?&screen_name=midgardmc"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
+                <li role="presentation"><a href="https://twitter.com/intent/follow?&screen_name=midgardmc"><i
+                        class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
                 </li>
             </ul>
         </div>
