--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <title>Midgard</title>
+    <meta name="description" content="We build nice things!">
+    <meta name="author" content="Midgard">
+    <title>Midgard - We build nice things!</title>
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
@@ -18,6 +18,11 @@
     <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
     <!-- Font Awesome -->
     <link rel="stylesheet" href="fonts/font-awesome-4.6.3/css/font-awesome.min.css">
+    <style>
+        .btn:focus, .btn:hover {
+            color: #5e5e5e;
+        }
+    </style>
 </head>
 <body>
 <div class="background"></div>
@@ -41,38 +46,47 @@
                     <li><a href="http://mc.midgardmc.com:8123/">DynMap</a></li>
                     <li><a href="./about.html">About</a></li>
                     <li><a href="./rules.html">Rules</a></li>
-                    <!--<li><a href="./apply.html">Apply</a></li>-->
+                    <li>
+                        <button class="btn navbar"
+                                style="background: none; margin-top: 0px !important; padding-bottom: 0px !important; padding-top: 0px !important;"
+                                data-toggle="tooltip" data-placement="bottom" title="Click to copy server URL"
+                                data-clipboard-text="mc.midgardmc.com">
+                            Connect
+                        </button>
+                    </li>
                 </ul>
             </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
     </nav>
-    <!-- Alert Box. If commented out disregard message.-->
-    <!-- <div class="alert alert-warning centered" role="alert"
-          style="font-family: Helvetica, Arial, sans-serif;margin-bottom: 10px;margin-top: 20px;letter-spacing: 0px;text-transform: none;"><span
-             class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span> <strong>Alert!</strong> Getting an error connecting to the server? Downgrade to 1.9.4 in the launcher until the server is updated to 1.10
-     </div>-->
-    <!--<div class="alert alert-danger centered" role="alert"
-         style="font-family: Helvetica, Arial, sans-serif;margin-bottom: 10px;margin-top: 20px;"><span
-            class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span> <strong>Alert!</strong> Midgard will be
-        down for maintenance on TBA.
-    </div>-->
-    <!--/ Alert Box -->
     <div class="container-fluid custom-container-fluid">
         <div class="jumbotron jumbotron-custom"></div>
-       <!-- <div class="row">
-            <div class="col-md-4"><h1>What is Midgard?</h1>
-                <p>Midgard is a Minecraft community started in 2011. With the main focus of providing a top notch user
-                    experience with little to no down time. Midgard provides a vanilla experience with little to no
-                    major game
-                    playing changes only additions to vanilla game play.</p></div>
-            <div class="col-md-4"><i class="fa fa-server fa-5x" aria-hidden="true"></i><h4>24/7 Uptime</h4></div>
-            <div class="col-md-4"><i class="fa fa-users fa-5x" aria-hidden="true"></i><h4>Creative Community</h4></div>
-        </div>-->
-
-        <h1>What is Midgard?</h1>
-        <p>Midgard is a Minecraft community started in 2011. With the main focus of providing a top notch user
-            experience with little to no down time. Midgard provides a vanilla experience with little to no major game
-            playing changes only additions to vanilla game play.</p>
+        <div class="row">
+            <div class="col-md-4"><i class="fa fa-shield fa-5x" aria-hidden="true"></i><h4>Run with
+                Experience</h4>
+                <p>Midgard's has been around for 5 years with staff that's knowledgeable from Server hardware to
+                    Minecraft itself.</p></div>
+            <div class="col-md-4"><i class="fa fa-tachometer fa-5x" aria-hidden="true"></i><h4>Powerful Backend</h4>
+                <p>Midgard runs on top notch hardware with SSD storage to give it the extra edge of speed for optimal
+                    game
+                    play.</p></div>
+            <div class="col-md-4"><i class="fa fa-users fa-5x" aria-hidden="true"></i><h4>Creative Community</h4>
+                <p>Midgard's community is built on strong creative builds that help with creating a beautiful server.
+                    Midgard is also a welcoming community that embarrasses a world culture.</p></div>
+        </div>
+    </div>
+    <img src="images\showcase2.png" class="img-responsive" alt="Responsive image">
+    <div class="container-fluid custom-container-fluid-section">
+        <h2 class="noletterspacing" style="text-transform: none;">To play on Midgard you must have a platform that supports Minecraft Desktop Edition.</h2>
+        <div class="row" style="text-align: center">
+            <div class="col-md-4"><i class="fa fa-windows fa-5x" aria-hidden="true"></i><h4>Windows</h4><a
+                    style="color: black" href="https://minecraft.net/en/download/">Download</a></div>
+            <div class="col-md-4"><i class="fa fa-apple fa-5x" aria-hidden="true"></i><h4>macOS</h4><a
+                    style="color: black" href="https://minecraft.net/en/download/">Download</a>
+            </div>
+            <div class="col-md-4"><i class="fa fa-linux fa-5x" aria-hidden="true"></i><h4>Linux</h4><a
+                    style="color: black" href="https://minecraft.net/en/download/">Download</a>
+            </div>
+        </div>
     </div>
     <footer class="footer">
         <div class="container-fluid custom-container-fluid">
@@ -81,11 +95,35 @@
                 <li role="presentation"><a href="https://twitter.com/intent/follow?&screen_name=midgardmc"><i
                         class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
                 </li>
+                <li role="presentation"><a href="mumble://mc.midgardmc.com?title=Root&version=1.2.0"><i
+                        class="fa fa-headphones fa-2x" aria-hidden="true"></i></a>
+                </li>
+                <li><a href="https://discord.gg/014TQwrNRaueX975o">
+                    <svg id="Layer_1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 245 240" width="2.3em">
+                        <style>.st0 {
+                            fill: #3d3d3d;
+                        }</style>
+                        <path class="st0"
+                              d="M104.4 103.9c-5.7 0-10.2 5-10.2 11.1s4.6 11.1 10.2 11.1c5.7 0 10.2-5 10.2-11.1.1-6.1-4.5-11.1-10.2-11.1zM140.9 103.9c-5.7 0-10.2 5-10.2 11.1s4.6 11.1 10.2 11.1c5.7 0 10.2-5 10.2-11.1s-4.5-11.1-10.2-11.1z"/>
+                        <path class="st0"
+                              d="M189.5 20h-134C44.2 20 35 29.2 35 40.6v135.2c0 11.4 9.2 20.6 20.5 20.6h113.4l-5.3-18.5 12.8 11.9 12.1 11.2 21.5 19V40.6c0-11.4-9.2-20.6-20.5-20.6zm-38.6 130.6s-3.6-4.3-6.6-8.1c13.1-3.7 18.1-11.9 18.1-11.9-4.1 2.7-8 4.6-11.5 5.9-5 2.1-9.8 3.5-14.5 4.3-9.6 1.8-18.4 1.3-25.9-.1-5.7-1.1-10.6-2.7-14.7-4.3-2.3-.9-4.8-2-7.3-3.4-.3-.2-.6-.3-.9-.5-.2-.1-.3-.2-.4-.3-1.8-1-2.8-1.7-2.8-1.7s4.8 8 17.5 11.8c-3 3.8-6.7 8.3-6.7 8.3-22.1-.7-30.5-15.2-30.5-15.2 0-32.2 14.4-58.3 14.4-58.3 14.4-10.8 28.1-10.5 28.1-10.5l1 1.2c-18 5.2-26.3 13.1-26.3 13.1s2.2-1.2 5.9-2.9c10.7-4.7 19.2-6 22.7-6.3.6-.1 1.1-.2 1.7-.2 6.1-.8 13-1 20.2-.2 9.5 1.1 19.7 3.9 30.1 9.6 0 0-7.9-7.5-24.9-12.7l1.4-1.6s13.7-.3 28.1 10.5c0 0 14.4 26.1 14.4 58.3 0 0-8.5 14.5-30.6 15.2z"/>
+                    </svg>
+                </a></li>
             </ul>
+            <p style="padding-left: 10px">Midgard is supported through the funds of the community. If you would like to donate contact <a style="color: black" href="https://twitter.com/NgtFlyer">NgtFlyer.</a></p>
         </div>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.10/clipboard.min.js"></script>
+    <script>
+        $(function () {
+            $('[data-toggle="tooltip"]').tooltip()
+        })
+    </script>
+    <script>
+        new Clipboard('.btn');
+    </script>
 </div>
 </body>
 </html>
