--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     play.</p></div>
             <div class="col-md-4"><i class="fa fa-users fa-5x" aria-hidden="true"></i><h4>Creative Community</h4>
                 <p>Midgard's community is built on strong creative builds that help with creating a beautiful server.
-                    Midgard is also a welcoming community that embarrasses a world culture.</p></div>
+                    </p></div>
         </div>
     </div>
     <img src="images\showcase2.png" class="img-responsive" alt="Responsive image">
