--- a/index.html
+++ b/index.html
@@ -70,13 +70,15 @@
                     game
                     play.</p></div>
             <div class="col-md-4"><i class="fa fa-users fa-5x" aria-hidden="true"></i><h4>Creative Community</h4>
-                <p>Midgard's community is built on strong creative builds that help with creating a beautiful server.
-                    </p></div>
+                <p>Midgard has a strong community and creative builds that make our server not only a great place to
+                    play, but one with a lot to explore and welcome people from all over the world.
+                </p></div>
         </div>
     </div>
     <img src="images\showcase2.png" class="img-responsive" alt="Responsive image">
     <div class="container-fluid custom-container-fluid-section">
-        <h2 class="noletterspacing" style="text-transform: none;">To play on Midgard you must have a platform that supports Minecraft Desktop Edition.</h2>
+        <h2 class="noletterspacing" style="text-transform: none;">To play on Midgard you must have a platform that
+            supports Minecraft Desktop Edition.</h2>
         <div class="row" style="text-align: center">
             <div class="col-md-4"><i class="fa fa-windows fa-5x" aria-hidden="true"></i><h4>Windows</h4><a
                     style="color: black" href="https://minecraft.net/en/download/">Download</a></div>
@@ -110,7 +112,8 @@
                     </svg>
                 </a></li>
             </ul>
-            <p style="padding-left: 10px">Midgard is supported through the funds of the community. If you would like to donate contact <a style="color: black" href="https://twitter.com/NgtFlyer">NgtFlyer.</a></p>
+            <p style="padding-left: 10px">Midgard is supported through the funds of the community. If you would like to
+                donate contact <a style="color: black" href="https://twitter.com/NgtFlyer">NgtFlyer.</a></p>
         </div>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
