--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="row">
             <div class="col-md-4"><i class="fa fa-shield fa-5x" aria-hidden="true"></i><h4>Run with
                 Experience</h4>
-                <p>Midgard's has been around for 5 years with staff that's knowledgeable from Server hardware to
+                <p>Midgard's has been around for 5 years with staff that's knowledgeable from server hardware to
                     Minecraft itself.</p></div>
             <div class="col-md-4"><i class="fa fa-tachometer fa-5x" aria-hidden="true"></i><h4>Powerful Backend</h4>
                 <p>Midgard runs on top notch hardware with SSD storage to give it the extra edge of speed for optimal
