--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     play.</p></div>
             <div class="col-md-4"><i class="fa fa-users fa-5x" aria-hidden="true"></i><h4>Creative Community</h4>
                 <p>Midgard has a strong community and creative builds that make our server not only a great place to
-                    play, but one with a lot to explore and welcome people from all over the world.
+                    play, but one with a lot to explore, and we welcome people from all over the world.
                 </p></div>
         </div>
     </div>
