Copy Updates and Bug Fixes

--- a/rules.html
+++ b/rules.html
@@ -41,7 +41,7 @@
                 <li><a href="./about.html">About</a></li>
                 <li><a href="./rules.html">Rules</a></li>
                 <li>
-                    <button class="btn navbar"
+                    <button class="btn navbar hideonmobile"
                             style="background: none; margin-top: 0px !important; padding-bottom: 0px !important; padding-top: 0px !important;"
                             data-toggle="tooltip" data-placement="bottom" title="Click to copy server URL"
                             data-clipboard-text="mc.midgardmc.com">
@@ -320,6 +320,7 @@
             </ul>
             <p style="padding-left: 10px">Midgard is supported through the funds of the community. If you would like to
                 donate contact <a style="color: black" href="https://twitter.com/NgtFlyer">NgtFlyer.</a></p>
+            <p style="padding-left: 10px">Builds featured in screenshots were constructed by NgtFlyer</p>
         </div>
     </footer>
     <div>
