--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
                 <li><a href="./about.html">About</a></li>
                 <li><a href="./rules.html">Rules</a></li>
                 <li>
-                    <button class="btn navbar"
+                    <button class="btn navbar hideonmobile"
                             style="background: none; margin-top: 0px !important; padding-bottom: 0px !important; padding-top: 0px !important;"
                             data-toggle="tooltip" data-placement="bottom" title="Click to copy server URL"
                             data-clipboard-text="mc.midgardmc.com">
@@ -145,7 +145,6 @@
 </div>
 <footer class="footer">
     <div class="container-fluid custom-container-fluid">
-
         <ul class="nav nav-pills">
             <li role="presentation"><a href="https://twitter.com/intent/follow?&screen_name=midgardmc"><i
                     class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
@@ -167,6 +166,8 @@
         </ul>
         <p style="padding-left: 10px">Midgard is supported through the funds of the community. If you would like to
             donate contact <a style="color: black" href="https://twitter.com/NgtFlyer">NgtFlyer.</a></p>
+        <p style="padding-left: 10px">Builds featured in screenshots were constructed by Legida, NgtFlyer, NullMatrix
+            and SpinNibbler</p>
     </div>
 </footer>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
