--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <li><a href="./about.html">About</a></li>
                     <li><a href="./rules.html">Rules</a></li>
                     <li>
-                        <button class="btn navbar"
+                        <button class="btn navbar hideonmobile"
                                 style="background: none; margin-top: 0px !important; padding-bottom: 0px !important; padding-top: 0px !important;"
                                 data-toggle="tooltip" data-placement="bottom" title="Click to copy server URL"
                                 data-clipboard-text="mc.midgardmc.com">
@@ -79,7 +79,7 @@
     <div class="container-fluid custom-container-fluid-section">
         <h2 class="noletterspacing" style="text-transform: none;">To play on Midgard you must have a platform that
             supports Minecraft Desktop Edition.</h2>
-        <div class="row" style="text-align: center">
+        <div class="row hideonmobile" style="text-align: center">
             <div class="col-md-4"><i class="fa fa-windows fa-5x" aria-hidden="true"></i><h4>Windows</h4><a
                     style="color: black" href="https://minecraft.net/en/download/">Download</a></div>
             <div class="col-md-4"><i class="fa fa-apple fa-5x" aria-hidden="true"></i><h4>macOS</h4><a
@@ -114,6 +114,7 @@
             </ul>
             <p style="padding-left: 10px">Midgard is supported through the funds of the community. If you would like to
                 donate contact <a style="color: black" href="https://twitter.com/NgtFlyer">NgtFlyer.</a></p>
+            <p style="padding-left: 10px">Builds featured in screenshots were constructed by Legida, NgtFlyer and NullMatrix</p>
         </div>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
