Bug fixes and design changes

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <!--<li><a href="./">Forums<span class="sr-only">(current)</span></a></li>-->
-                    <li><a href="http://mc.midgardmc.com:8123/">DynMap</a></li>
                     <li><a href="./about.html">About</a></li>
                     <li><a href="./rules.html">Rules</a></li>
+                    <!--<li><a href="./">Forums</a></li>-->
+                    <li><a href="http://mc.midgardmc.com:8123/">DynMap</a></li>
                     <li>
                         <button class="btn navbar hideonmobile"
                                 style="background: none; margin-top: 0px !important; padding-bottom: 0px !important; padding-top: 0px !important;"
@@ -77,8 +77,8 @@
     </div>
     <img src="images\showcase2.png" class="img-responsive" alt="Responsive image">
     <div class="container-fluid custom-container-fluid-section">
-        <h2 class="noletterspacing" style="text-transform: none;">To play on Midgard you must have a platform that
-            supports Minecraft Desktop Edition.</h2>
+        <h2 class="noletterspacing" style="font-size: 20px; text-align: center;">To play on Midgard you must have Minecraft PC / Mac Edition</h2>
+        <p class="noletterspacing" style="text-align: center;">Midgard is running on the latest version of Minecraft PC / Mac Edition 1.10</p>
         <div class="row hideonmobile" style="text-align: center">
             <div class="col-md-4"><i class="fa fa-windows fa-5x" aria-hidden="true"></i><h4>Windows</h4><a
                     style="color: black" href="https://minecraft.net/en/download/">Download</a></div>
