--- a/about.html
+++ b/about.html
@@ -36,10 +36,10 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-                <!--<li><a href="./">Forums<span class="sr-only">(current)</span></a></li>-->
-                <li><a href="http://mc.midgardmc.com:8123/">DynMap</a></li>
                 <li><a href="./about.html">About</a></li>
                 <li><a href="./rules.html">Rules</a></li>
+                <!--<li><a href="./">Forums</a></li>-->
+                <li><a href="http://mc.midgardmc.com:8123/">DynMap</a></li>
                 <li>
                     <button class="btn navbar hideonmobile"
                             style="background: none; margin-top: 0px !important; padding-bottom: 0px !important; padding-top: 0px !important;"
@@ -172,5 +172,14 @@
 </footer>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.10/clipboard.min.js"></script>
+<script>
+    $(function () {
+        $('[data-toggle="tooltip"]').tooltip()
+    })
+</script>
+<script>
+    new Clipboard('.btn');
+</script>
 </body>
 </html>
