--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
     <div class="container-fluid custom-container-fluid">
         <div class="jumbotron jumbotron-custom"></div>
         <div class="row">
-            <div class="col-md-4"><i class="fa fa-shield fa-5x" aria-hidden="true"></i><h4>Run with
-                Experience</h4>
+            <div class="col-md-4"><i class="fa fa-shield fa-5x" aria-hidden="true"></i><h4>Experienced Team</h4>
                 <p>Midgard's has been around for 5 years with staff that's knowledgeable from server hardware to
                     Minecraft itself.</p></div>
             <div class="col-md-4"><i class="fa fa-tachometer fa-5x" aria-hidden="true"></i><h4>Powerful Backend</h4>
