--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <li role="presentation"><a href="mumble://mc.midgardmc.com?title=Root&version=1.2.0"><i
                         class="fa fa-headphones fa-2x" aria-hidden="true"></i></a>
                 </li>
-                <li><a href="https://discord.gg/014TQwrNRaueTOzjH">
+                <li><a href="https://discord.gg/014TQwrNRaueX975o">
                     <svg id="Layer_1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 245 240" width="2.3em">
                         <style>.st0 {
                             fill: #3d3d3d;
