Image Compression and Content updates

--- a/about.html
+++ b/about.html
@@ -73,19 +73,19 @@
             <!-- Wrapper for slides -->
             <div class="carousel-inner" role="listbox">
                 <div class="item active">
-                    <img src="images/2016-06-09_12.55.29.png" alt="Chania" width="460" height="345">
+                    <img src="images/showcase_gallery_images/showcase1.png" alt="Images 1" width="460" height="345">
                 </div>
 
                 <div class="item">
-                    <img src="images/2016-06-09_12.53.00.png" alt="Chania" width="460" height="345">
+                    <img src="images/showcase_gallery_images/showcase2.png" alt="Image 2" width="460" height="345">
                 </div>
 
                 <div class="item">
-                    <img src="images/2016-06-09_13.02.09.png" alt="Flower" width="460" height="345">
+                    <img src="images/showcase_gallery_images/showcase3.png" alt="Image 3" width="460" height="345">
                 </div>
 
                 <div class="item">
-                    <img src="images/2016-06-09_13.03.31.png" alt="Flower" width="460" height="345">
+                    <img src="images/showcase_gallery_images/showcase4.png" alt="Image 4" width="460" height="345">
                 </div>
             </div>
 
