--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 </p></div>
         </div>
     </div>
-    <img src="images\showcase2.png" class="img-responsive" alt="Responsive image">
+    <img src="images/homepage_images/showcase2.png" class="img-responsive" alt="Responsive image">
     <div class="container-fluid custom-container-fluid-section">
         <h2 class="noletterspacing" style="font-size: 20px; text-align: center;">To play on Midgard you must have Minecraft PC / Mac Edition</h2>
         <p class="noletterspacing" style="text-align: center;">Midgard is running on the latest version of Minecraft PC / Mac Edition 1.10</p>
