Website content updates
Updated website with play quotes and a slight design refresh.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 </head>
 <body>
 <div class="background"></div>
-
+<div class="background-gradient">
+</div>
 <div class="centered">
     <nav class="navbar navbar-default">
         <div class="container-fluid">
@@ -59,8 +60,11 @@
         </div><!--/.container-fluid -->
     </nav>
     <div class="container-fluid custom-container-fluid">
-        <div class="jumbotron jumbotron-custom"></div>
-        <div class="row">
+        <div class="quote-box">
+            <div class="quote">
+            <h3>"Midgard is a great place for me to get away from the stresses of college."</h3><p style="padding-left: 10px;"><i>GeoPMel</i></p></div>
+            </div>
+        <div class="row" style="margin-top: 30px;">
             <div class="col-md-4"><i class="fa fa-shield fa-5x" aria-hidden="true"></i><h4>Experienced Team</h4>
                 <p>Midgard's has been around for 5 years with staff that's knowledgeable from server hardware to
                     Minecraft itself.</p></div>
@@ -73,11 +77,14 @@
                     play, but one with a lot to explore, and we welcome people from all over the world.
                 </p></div>
         </div>
+        </div>
+        <img src="images/homepage_images/showcase2.png" class="img-responsive" alt="Responsive image">
     </div>
-    <img src="images/homepage_images/showcase2.png" class="img-responsive" alt="Responsive image">
     <div class="container-fluid custom-container-fluid-section">
-        <h2 class="noletterspacing" style="font-size: 20px; text-align: center;">To play on Midgard you must have Minecraft PC / Mac Edition</h2>
-        <p class="noletterspacing" style="text-align: center;">Midgard is running on the latest version of Minecraft PC / Mac Edition 1.10</p>
+        <h2 class="noletterspacing" style="font-size: 20px; text-align: center;">To play on Midgard you must have
+            Minecraft PC / Mac Edition</h2>
+        <p class="noletterspacing" style="text-align: center;">Midgard is running on the latest version of Minecraft PC
+            / Mac Edition 1.10</p>
         <div class="row hideonmobile" style="text-align: center">
             <div class="col-md-4"><i class="fa fa-windows fa-5x" aria-hidden="true"></i><h4>Windows</h4><a
                     style="color: black" href="https://minecraft.net/en/download/">Download</a></div>
@@ -116,7 +123,8 @@
             </ul>
             <p style="padding-left: 10px">Midgard is supported through the funds of the community. If you would like to
                 donate contact <a style="color: black" href="https://twitter.com/NgtFlyer">NgtFlyer.</a></p>
-            <p style="padding-left: 10px">Builds featured in screenshots were constructed by Legida, NgtFlyer and NullMatrix</p>
+            <p style="padding-left: 10px">Builds featured in screenshots were constructed by Legida, NgtFlyer and
+                NullMatrix</p>
         </div>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
