--- a/rules.html
+++ b/rules.html
@@ -21,7 +21,9 @@
     <link rel="stylesheet" href="fonts/font-awesome-4.6.3/css/font-awesome.min.css">
 </head>
 <body>
-<div class="background-rules"></div>
+<div class=" background-subpages background-rules"></div>
+<div class="background-gradient-subpages">
+</div>
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <div class="navbar-header">
