--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div class="container-fluid custom-container-fluid">
         <div class="quote-box">
             <div class="quote">
-            <h3>"Midgard is a great place for me to get away from the stresses of college."</h3><p style="padding-left: 10px;"><i>GeoPMel</i></p></div>
+            <h3>"Midgard is a great place for me to get away from the stresses of college."</h3><p style="padding-left: 10px;">GeoPMel <cite title="Member Since 2013">Member Since 2013</cite></p></div>
             </div>
         <div class="row" style="margin-top: 30px;">
             <div class="col-md-4"><i class="fa fa-shield fa-5x" aria-hidden="true"></i><h4>Experienced Team</h4>
