Mobile bug fixes

--- a/about.html
+++ b/about.html
@@ -19,6 +19,19 @@
     <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
     <!-- Font Awesome -->
     <link rel="stylesheet" href="fonts/font-awesome-4.6.3/css/font-awesome.min.css">
+    <style>
+        @media screen and (max-width: 920px) {
+            .custom-container-fluid {
+                margin-top: 200px !important;
+            }
+        }
+        @media screen and (max-width: 500px) {
+            .custom-container-fluid {
+                margin-top: auto !important;
+            }
+        }
+
+    </style>
 </head>
 <body>
 <div class=" background-subpages background-about"></div>
