--- a/rules.html
+++ b/rules.html
@@ -19,6 +19,19 @@
     <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
     <!-- Font Awesome -->
     <link rel="stylesheet" href="fonts/font-awesome-4.6.3/css/font-awesome.min.css">
+    <style>
+        @media screen and (max-width: 920px) {
+            .custom-container-fluid {
+                margin-top: 200px !important;
+            }
+        }
+        @media screen and (max-width: 500px) {
+            .custom-container-fluid {
+                margin-top: auto !important;
+            }
+        }
+
+    </style>
 </head>
 <body>
 <div class=" background-subpages background-rules"></div>
@@ -60,7 +73,9 @@
     <button class="btn btn-default" type="button" data-toggle="collapse" data-target="#collapseExample"
             aria-expanded="false" aria-controls="collapseExample">
         Table of Contents
-    </button> <a class="btn btn-default" href="downloads/revision_28_march_2016/Midgard_Rules-28-March-2016.pdf" role="button">Download PDF</a>
+    </button>
+    <a class="btn btn-default" href="downloads/revision_28_march_2016/Midgard_Rules-28-March-2016.pdf" role="button">Download
+        PDF</a>
     <div class="collapse" id="collapseExample" style="padding-top: 2em;">
         <div class="panel panel-default rulestoc">
             <!-- Default panel contents -->
@@ -333,7 +348,8 @@
             </ul>
             <p style="padding-left: 10px">Midgard is supported through the funds of the community. If you would like to
                 donate contact <a style="color: black" href="https://twitter.com/NgtFlyer">NgtFlyer.</a></p>
-            <p style="padding-left: 10px">Builds featured in screenshots were constructed by Legida, NgtFlyer and NullMatrix</p>
+            <p style="padding-left: 10px">Builds featured in screenshots were constructed by Legida, NgtFlyer and
+                NullMatrix</p>
         </div>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
